# neuland.app

./: .gitignore  .gitmodules  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  browser-thi-api.js  build_android.sh  data-security-de.md  data-security.md  mensa-booking-api.md  mensa-rest-api.md  package-lock.json  test.html  thi-rest-api.md
.github/ISSUE_TEMPLATE/: feature_request.md
asset-server/: Dockerfile  download_assets.sh
assets/: Dockerfile  Dockerfile_pwaicons  Dockerfile_python  Dockerfile_rust  cron  install.sh  run.sh
building-distances/: .gitignore  calculate-distances.py  requirements.txt
course-downloader/: .gitignore
date-scraper/: .gitignore  Cargo.toml  Dockerfile  README.md  calendar.json  run.sh  run_extraction.sh
date-scraper/src/: main.rs
docs/: data-security-de.md  data-security.md  getavailabilities-full.json  mensa-booking-api.md  thi-rest-api.md
mensa-proxy/: Dockerfile
mock-server/: Dockerfile  app.js  package-lock.json  package.json
movie-details/: .gitignore  movie-details.py  requirements.txt
proxy/: Dockerfile
rogue-thi-app/: .env  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  capacitor.config.json  deploy.sh  next-i18next.config.js  next.config.js  package-lock.json  package.json
room-distances/: .gitignore  calculate-distances.py
spo-parser/: .gitignore  combine_jsons.py  download_spo_pdfs.py  extract_grade_weighting.py  requirements.txt  run_extraction.sh
thi-translator/: README.md  requirements.txt  run.sh  thi-translator.py  thi_translator.py
(+358 files in other folders)
