[package]
name = "date-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.6.4"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
